# film-ranking

./: .gitignore  README.md  output.prof  pyproject.toml
.github/workflows/: pre-commit.yml
example_data/: awards.csv  countries.tsv
film_ranking/: __main__.py
film_ranking/cli/: __init__.py  executor.py
film_ranking/lib/: analyze.py  load_data.py  movies_origin.py  util.py
notebook/: analyze.ipynb  compare_actors.ipynb  compare_countries.ipynb  compare_directors.ipynb  compare_movies.ipynb  compare_producers.ipynb  search_movie.ipynb  search_person.ipynb  top_actors.ipynb  top_countries.ipynb  top_directors.ipynb  top_movies.ipynb  top_producers.ipynb
tests/lib/: test_analyze.py
