[tool.poetry]
name = "film-ranking"
version = "0.1.0"
description = "Movies impact analyzer/ranking tool."
authors = ["Maulana Ragil Zakariah <m.zakariah@student.uw.edu.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
