[tool.poetry]
name = "film_ranking"
version = "0.1.0"
description = "Movies impact analyzer/ranking tool."
authors = ["Maulana Ragil Zakariah <m.zakariah@student.uw.edu.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.2"
pandas = "^2.2.2"
jupyter = "^1.0.0"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
papermill = "^2.6.0"
colorama = "^0.4.6"
nbformat = "^5.10.4"
nbconvert = "^7.16.4"
snakeviz = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
pytest = "^8.2.2"
playwright = "^1.45.0"

[tool.poetry.scripts]
film_ranking = "film_ranking:__main__.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
